@@ -3,6 +3,7 @@
 
        NEW: Bookmarks.
        NEW: FM RDS decoder using gr-rds.
+     FIXED: Prevent crash due to device errors while starting the application.
   IMPROVED: Fractional PPM correction.
 
      2.3.2  Released November 28, 2014
